sandbox/output
StockProfit.cpp:10:9: error: redefinition of 'maxProfits' with a different type: 'int [0]' vs 'int [2]'
    int maxProfits[0] = prices_[0];
        ^
StockProfit.cpp:9:9: note: previous definition is here
    int maxProfits[2];
        ^
StockProfit.cpp:11:9: error: redefinition of 'maxProfits' with a different type: 'int [1]' vs 'int [2]'
    int maxProfits[1] = prices_[1] - prices_[0];
        ^
StockProfit.cpp:9:9: note: previous definition is here
    int maxProfits[2];
        ^
2 errors generated.
make: *** [test] Error 1
